<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textBusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text_BuscarMascota"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtBusqueda"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/desc_IngreseNombre"
            android:inputType="textPersonName"
            android:text="" />

        <ImageButton
            android:id="@+id/btnFechaForm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:onClick="btnBuscar_Click"
            android:scaleType="fitCenter"
            android:src="@mipmap/img_buscar" />
    </LinearLayout>


</LinearLayout>