<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUIListar">

    <LinearLayout
        android:clipToPadding="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgListar"
            android:layout_width="131dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/img_listar" />

        <TextView
            android:id="@+id/txtListar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/txt_listar_text"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/lstListaAnimales"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="btnListar_Click"
            android:text="@string/txtListar" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="btnVolver_Click"
            android:text="@string/btn_volverText" />

    </LinearLayout>
</ScrollView>
