<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUIDetalles">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDetalle"
                android:layout_width="131dp"
                android:layout_height="124dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/fault" />

            <TextView
                android:id="@+id/txtDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/text_Detalle"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <include
                layout="@layout/formulario_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/btnVolver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="btnVolver_Click"
                android:text="@string/btn_volverText" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>